--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,14 @@ fastapi = "^0.99.1"
 python-dotenv = "^1.0.0"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
+beanie = "^1.20.0"
+loguru = "^0.7.0"
+uvicorn = "^0.22.0"
+gunicorn = "^20.1.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
