--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,21 @@ authors = ["suraw00t <surawut.kong@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.99.1"
-python-dotenv = "^1.0.0"
+fastapi = "^0.100.1"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
-beanie = "^1.20.0"
 loguru = "^0.7.0"
 uvicorn = "^0.22.0"
 gunicorn = "^20.1.0"
+pydantic = {extras = ["dotenv"], version = "^2.1.1"}
+beanie = {git = "https://github.com/roman-right/beanie.git", branch = "support_both_pydantic_v1_v2"}
+pydantic-settings = "^2.0.2"
+pillow = "^10.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
+mypy = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core"]
