chore: :robot: add multipath

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = {extras = ["dotenv"], version = "^2.1.1"}
 beanie = {git = "https://github.com/roman-right/beanie.git", branch = "support_both_pydantic_v1_v2"}
 pydantic-settings = "^2.0.2"
 pillow = "^10.0.0"
+python-multipart = "^0.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
